--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,4 +13,7 @@ services:
     environment:
       - PUID=0
       - PGID=0
+    dns:
+      - 8.8.8.8
+      - 1.1.1.1
     restart: unless-stopped
