--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,4 +13,5 @@ services:
     environment:
       - PUID=0
       - PGID=0
+    command: streamlit run app.py --server.port=8502 --server.address=0.0.0.0
     restart: unless-stopped
